// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/item-icon/ItemIcon render() should render component with additional props 1`] = `
<IconFileAudio
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 2`] = `
<BookmarkIcon
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 3`] = `
<IconFileBoxNote
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 4`] = `
<IconFileCode
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 5`] = `
<IconFileDefault
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 6`] = `
<IconFileDocument
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 7`] = `
<IconFileExcelSpreadsheet
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 8`] = `
<IconFolderCollab
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 9`] = `
<IconFolderExternal
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 10`] = `
<IconFolderPersonal
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 11`] = `
<IconFileGoogleDocs
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 12`] = `
<IconFileGoogleSheets
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 13`] = `
<IconFileGoogleSlides
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 14`] = `
<IconFileIllustrator
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 15`] = `
<IconFileImage
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 16`] = `
<IconFileIndesign
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 17`] = `
<IconFileKeynote
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 18`] = `
<IconFileNumbers
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 19`] = `
<IconFilePages
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 20`] = `
<IconFilePDF
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 21`] = `
<IconFilePhotoshop
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 22`] = `
<IconFilePowerpointPresentation
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 23`] = `
<IconFilePresentation
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 24`] = `
<IconFileSpreadsheet
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 25`] = `
<IconFileText
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 26`] = `
<IconFileThreeD
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 27`] = `
<IconFolderPersonal
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 28`] = `
<IconFileVector
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 29`] = `
<IconFileVideo
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 30`] = `
<IconFileWordDocument
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 31`] = `
<IconFileZip
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 32`] = `
<IconFileDefault
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 1`] = `
<IconFileAudio
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 2`] = `
<BookmarkIcon
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 3`] = `
<IconFileBoxNote
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 4`] = `
<IconFileCode
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 5`] = `
<IconFileDefault
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 6`] = `
<IconFileDocument
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 7`] = `
<IconFileExcelSpreadsheet
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 8`] = `
<IconFolderCollab
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 9`] = `
<IconFolderExternal
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 10`] = `
<IconFolderPersonal
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 11`] = `
<IconFileGoogleDocs
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 12`] = `
<IconFileGoogleSheets
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 13`] = `
<IconFileGoogleSlides
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 14`] = `
<IconFileIllustrator
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 15`] = `
<IconFileImage
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 16`] = `
<IconFileIndesign
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 17`] = `
<IconFileKeynote
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 18`] = `
<IconFileNumbers
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 19`] = `
<IconFilePages
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 20`] = `
<IconFilePDF
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 21`] = `
<IconFilePhotoshop
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 22`] = `
<IconFilePowerpointPresentation
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 23`] = `
<IconFilePresentation
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 24`] = `
<IconFileSpreadsheet
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 25`] = `
<IconFileText
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 26`] = `
<IconFileThreeD
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 27`] = `
<IconFolderPersonal
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 28`] = `
<IconFileVector
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 29`] = `
<IconFileVideo
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 30`] = `
<IconFileWordDocument
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 31`] = `
<IconFileZip
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 32`] = `
<IconFileDefault
  height={32}
  width={32}
/>
`;
